plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
    id "org.flywaydb.flyway" version "7.7.0"
}

group = 'com.courtcanva'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

test {
    testLogging {
        events "PASSED", "SKIPPED", "FAILED"
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'com.amazonaws:aws-java-sdk-ses:1.12.315'
    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.57'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test:5.7.3'


}

flyway {
    url = 'jdbc:postgresql://localhost:5432/postgres?currentSchema=franchise'
    user = 'postgres'
    password = 'admin'
    locations = ['classpath:db/migration']
}

tasks.named('test') {
    useJUnitPlatform()
}